fix: scrollbar stutter

--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,7 @@
 
 html {
     -webkit-text-size-adjust: 100%;
+    scrollbar-gutter: stable;
 }
 
 .skip-link {
